--- a/.github/workflows/deploy-to-publish-repo.yml
+++ b/.github/workflows/deploy-to-publish-repo.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy dist to publish repository
         uses: peaceiris/actions-gh-pages@v4
         with:
-          personal_token: ${{ secrets.PUBLISH_REPO_TOKEN }}
+          deploy_key: ${{ secrets.PUBLISH_REPO_DEPLOY_KEY }}
           external_repository: miniade/edxi.github.io-blog
           publish_branch: master
           publish_dir: ./dist
