--- a/.github/workflows/deploy-to-publish-repo.yml
+++ b/.github/workflows/deploy-to-publish-repo.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Checkout publish repo for migration audit
+      - name: Checkout legacy source repo for migration audit
         uses: actions/checkout@v4
         with:
-          repository: miniade/edxi.github.io-blog
+          repository: edxi/edxi.github.io
           path: legacy-source
 
       - name: Audit migration parity
