--- a/.github/workflows/deploy-to-publish-repo.yml
+++ b/.github/workflows/deploy-to-publish-repo.yml
@@ -33,6 +33,45 @@ jobs:
           LEGACY_BLOG_ROOT: legacy-source
         run: npm run audit:migration
 
+      - name: Append migration parity summary
+        if: always()
+        run: |
+          node <<'NODE'
+          const fs = require('node:fs');
+          const reportPath = 'docs/MIGRATION_AUDIT.json';
+          const summaryPath = process.env.GITHUB_STEP_SUMMARY;
+
+          function append(text) {
+            if (!summaryPath) return;
+            fs.appendFileSync(summaryPath, `${text}\n`, 'utf8');
+          }
+
+          if (!fs.existsSync(reportPath)) {
+            console.warn(`Warning: ${reportPath} not found; skipping parity summary.`);
+            append('## Migration parity');
+            append('- WARNING: `docs/MIGRATION_AUDIT.json` not found; summary unavailable.');
+            process.exit(0);
+          }
+
+          try {
+            const raw = fs.readFileSync(reportPath, 'utf8');
+            const r = JSON.parse(raw);
+            append('## Migration parity');
+            append(`- Generated: ${r.generatedAt ?? 'unknown'}`);
+            append(`- Legacy posts: ${r.totalLegacyPosts ?? 'n/a'}`);
+            append(`- Astro posts: ${r.totalAstroPosts ?? 'n/a'}`);
+            append(`- Missing in Astro: ${Array.isArray(r.missingInAstro) ? r.missingInAstro.length : 'n/a'}`);
+            append(`- Extra in Astro: ${Array.isArray(r.extraInAstro) ? r.extraInAstro.length : 'n/a'}`);
+            append(`- Has diffs: ${r.hasDiffs === true ? 'yes' : 'no'}`);
+          } catch (error) {
+            const msg = error instanceof Error ? error.message : String(error);
+            console.warn(`Warning: failed to read ${reportPath}: ${msg}`);
+            append('## Migration parity');
+            append(`- WARNING: Failed to parse \`docs/MIGRATION_AUDIT.json\`: ${msg}`);
+            process.exit(0);
+          }
+          NODE
+
       - name: Build Astro
         run: npm run build
 
@@ -41,7 +80,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: migration-audit-report
-          path: docs/MIGRATION_AUDIT.md
+          path: |
+            docs/MIGRATION_AUDIT.md
+            docs/MIGRATION_AUDIT.json
           if-no-files-found: warn
 
       - name: Deploy dist to publish repository
