--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           personal_token: ${{ secrets.DEPLOY_TOKEN }}
           publish_dir: edxi-blog-astro/dist
-          publish_branch: gh-pages
+          publish_branch: main
           external_repository: miniade/miniade.github.io
